Flex/css/style.css
:root {
    --main-color: #333;
    --main-color-alternative: #fff; 
    --defolt-width-content: 900px;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    line-height: 1.5;
    text-align: center;
    background: var(--main-color);
}

.main-header {
    display: flex;
    justify-content: center;
}

.headerBody {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;  
    min-height: 50vh;
    background: var(--main-color) url(https://viktoriia-fcodetc.github.io/grid-responsive-hw/imgs/bg.png);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.4;
    z-index: -1;  
}

.headerContent {
    position: relative; 
    min-height: 50vh;
    max-width: var(--defolt-width-content);
    padding: 30px;
    color: var(--main-color-alternative);
    z-index: 1;         
    display: flex;
    justify-content: center; 
    align-items: center;     
    flex-direction: column;
}

/* .headerContent > * {
    margin: 10px;
} */

.header-indent {
    margin: 10px;
}

.btn {
    display: inline-block;
    background: var(--main-color);
    color: var(--main-color-alternative);
    text-decoration: none;
    padding: 18px 35px;
    border: 1px solid #666;
    font-size: 20px;
}

.btn:hover {
    background: var(--main-color-alternative);
    color: var(--main-color);
}

.section-1 {
    background-color: var(--main-color-alternative);
    color: var(--main-color);
    display: flex;
    justify-content: center; 
    align-items: center; 
    flex-direction: column; 
    padding: 20px;
}
/* .section-1 > * {
    padding: 20px;
} */

.section-1-indent {
    padding: 20px;
}

.section-1-containerForP {
    display: flex;
    justify-content: center; 
    align-items: flex-start;     
    flex-direction: row;
    max-width: var(--defolt-width-content);
    
}

.section-2 {
    background-color: var(--main-color);
    display: flex;
    justify-content: center; 
    flex-direction: row; 
    padding: 20px;
    gap: 20px;
}

.card {
    background-color: var(--main-color-alternative);
    color: var(--main-color);
    max-width: 280px;
    width: 100%;
}

/* .card > * {
    margin-bottom: 40px;
} */

.card-indent {
    margin-bottom: 40px;
}

.card-img {
    width: 100%; 
    display: block;  
}

.card-p, .card-h3 {
    padding: 0 20px;
}

.section-3 {
    background-color: var(--main-color-alternative);
    color: var(--main-color);
    display: flex;
    justify-content: center; 
    align-items: center; 
    flex-direction: column; 
    padding: 30px;
}

/* .section-3 > h2, .section-3 > p {
    max-width: var(--defolt-width-content);
    margin: 25px 0;
} */

.section-3-h2, .section-3-p{
    max-width: var(--defolt-width-content);
    margin: 25px 0;
}

.section-4 {
    display: flex;
    flex-direction: row;
    
    color: var(--main-color-alternative);
}

.contact {
    background-color: #2690d4;
    /* flex: 1; */
    width: 50%;
    padding: 40px;
}

.contact-link {
    text-decoration: none; 
    color: var(--main-color-alternative);
    word-break: break-all;
}

.about-company {
    /* flex: 1; */
    width: 50%;
    padding: 30px;
}

/* .contact > *, .about-company > * {
    margin: 50px 0;
}  */

.section-4-indent{
    margin: 50px 0;
}

.main-footer {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 35px;
    background: black;
    color: var(--main-color-alternative);
}

.Project-By {
    display: flex;
    justify-content: center; 
    align-items: center;     
    gap: 5px;                
}

.Project-By-link {
    text-decoration: none;
    color: #2690d4; 
}

